--- a/notebooks/comfyui_colab_with_manager.ipynb
+++ b/notebooks/comfyui_colab_with_manager.ipynb
@@ -97,10 +97,53 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install av\n"
+        "# THE \"MISSING PARTS\" INJECTOR\n",
+        "# Run this BEFORE starting the ComfyUI engine.\n",
+        "# It downloads the Flux Brain, Audio Engine, and Video Tools.\n",
+        "\n",
+        "import os\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# 1. Connect to Drive (To save the files forever)\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# 2. Fix the Mobile Video Crash\n",
+        "print(\"Fixing Video Libraries...\")\n",
+        "!pip install av\n",
+        "\n",
+        "# 3. Create Folders (If they don't exist)\n",
+        "print(\"Creating Directories...\")\n",
+        "!mkdir -p /content/drive/MyDrive/ComfyUI/custom_nodes\n",
+        "!mkdir -p /content/drive/MyDrive/ComfyUI/models/checkpoints\n",
+        "\n",
+        "# 4. Download the Missing Custom Nodes (Audio, Video, Consistency)\n",
+        "print(\"Installing Missing Nodes...\")\n",
+        "%cd /content/drive/MyDrive/ComfyUI/custom_nodes\n",
+        "!git clone https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite\n",
+        "!git clone https://github.com/receyuki/ComfyUI-Audio\n",
+        "!git clone https://github.com/cubiq/ComfyUI_IPAdapter_plus\n",
+        "\n",
+        "# 5. Download The Brains (The Big Files)\n",
+        "%cd /content/drive/MyDrive/ComfyUI/models/checkpoints\n",
+        "\n",
+        "# FLUX SCHNELL (11GB) - This fixes your \"Value not in list\" error\n",
+        "print(\"Downloading FLUX (Critical)...\")\n",
+        "!wget -nc https://huggingface.co/black-forest-labs/FLUX.1-schnell/resolve/main/flux1-schnell.safetensors\n",
+        "\n",
+        "# SVD XT (Video Engine)\n",
+        "print(\"Downloading Video Engine...\")\n",
+        "!wget -nc https://huggingface.co/stabilityai/stable-video-diffusion-img2vid-xt/resolve/main/svd_xt.safetensors\n",
+        "\n",
+        "# MusicGen (Audio Engine)\n",
+        "print(\"Downloading Audio Engine...\")\n",
+        "!wget -nc https://huggingface.co/facebook/musicgen-medium/resolve/main/model.safetensors\n",
+        "\n",
+        "print(\"-----------------------------------------------\")\n",
+        "print(\"INJECTION COMPLETE. NOW RUN THE MAIN CELL BELOW.\")\n",
+        "print(\"-----------------------------------------------\")\n"
       ],
       "metadata": {
-        "id": "nv7l9KNO56BQ"
+        "id": "S2Jsu8pzNECI"
       },
       "execution_count": null,
       "outputs": []
