--- a/notebooks/comfyui_colab_with_manager.ipynb
+++ b/notebooks/comfyui_colab_with_manager.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "bbbbbbbbbb",
         "colab": {
@@ -442,6 +442,44 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# AUDIO REPAIR PROTOCOL\n",
+        "# Fixes \"MusicGenModelLoader does not exist\" error\n",
+        "\n",
+        "import os\n",
+        "\n",
+        "print(\"FIXING AUDIO ENGINE...\")\n",
+        "%cd /content/ComfyUI/custom_nodes\n",
+        "\n",
+        "# 1. Delete broken audio folder if it exists\n",
+        "if os.path.exists(\"ComfyUI-Audio\"):\n",
+        "    !rm -rf ComfyUI-Audio\n",
+        "\n",
+        "    # 2. Re-Download the correct Audio Pack\n",
+        "    !git clone https://github.com/receyuki/ComfyUI-Audio\n",
+        "\n",
+        "    # 3. Force Install Audio Dependencies (Critical Step)\n",
+        "    %cd ComfyUI-Audio\n",
+        "    !pip install -r requirements.txt\n",
+        "    # Force install audiocraft which often fails silently\n",
+        "    !pip install git+https://github.com/facebookresearch/audiocraft.git\n",
+        "\n",
+        "    # 4. Restart Server\n",
+        "    print(\"------------------------------------------------\")\n",
+        "    print(\"AUDIO FIXED. RESTARTING ENGINE...\")\n",
+        "    print(\"------------------------------------------------\")\n",
+        "    %cd /content/ComfyUI\n",
+        "    !python main.py --dont-print-server & cloudflared tunnel --url http://localhost:8188\n",
+        ""
+      ],
+      "metadata": {
+        "id": "5sxRIshFXBx6"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
