--- a/Master.ipynb
+++ b/Master.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNakXb9W082zDF1aHe4GaHA",
+      "authorship_tag": "ABX9TyOjp96lfuu/ZH1iGRBnCl5s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +30,9 @@
       "cell_type": "code",
       "source": [
         "# ==============================================================================\n",
-        "#  HEADLESS STUDIO v28.0 (Dependency Patch)\n",
+        "#  HEADLESS STUDIO v29.0 (The Omni-Patch)\n",
         "#  Engine: ComfyUI + GitMyLo + ParlerTTS\n",
-        "#  Fixes: Missing 'encodec' and 'audiotools' modules.\n",
+        "#  Fixes: Missing 'funcy', 'encodec', 'audiotools', and 'torch' conflicts.\n",
         "# ==============================================================================\n",
         "\n",
         "import os\n",
@@ -64,23 +64,26 @@
         "!git clone https://github.com/smthemex/ComfyUI_ParlerTTS.git\n",
         "\n",
         "print(\"------------------------------------------------\")\n",
-        "print(\"STEP 4: FORCED DEPENDENCY INSTALLATION (The Patch)\")\n",
+        "print(\"STEP 4: FORCED DEPENDENCY INSTALLATION (The Fix)\")\n",
         "print(\"------------------------------------------------\")\n",
-        "# 1. FIX AUDIO-NODES (Missing 'encodec')\n",
+        "# 1. FIX AUDIO-NODES (GitMyLo)\n",
         "%cd /content/ComfyUI/custom_nodes/ComfyUI-audio-nodes\n",
-        "!rm requirements.txt\n",
-        "!pip install soundfile numpy scipy librosa encodec\n",
         "\n",
-        "# 2. FORCE AUDIOCRAFT\n",
+        "# NUCLEAR STRIKE: Delete the bad manifest\n",
+        "!rm requirements.txt\n",
+        "\n",
+        "# MANUAL INSTALL: We explicitly install 'funcy', 'encodec', and others.\n",
+        "# This fixes the error in your screenshot.\n",
+        "!pip install funcy encodec soundfile numpy scipy librosa\n",
+        "\n",
+        "# FORCE AUDIOCRAFT (No Dependencies Mode)\n",
         "!pip install --no-deps git+https://github.com/facebookresearch/audiocraft.git\n",
         "\n",
-        "# 3. FIX PARLER TTS (Missing 'audiotools')\n",
+        "# 2. FIX PARLER TTS\n",
         "%cd ../ComfyUI_ParlerTTS\n",
         "!pip install -r requirements.txt\n",
+        "# Manually install audiotools to prevent the other common error\n",
         "!pip install git+https://github.com/descriptinc/audiotools.git\n",
-        "\n",
-        "# 4. FINAL CLEANUP\n",
-        "%cd ..\n",
         "\n",
         "print(\"------------------------------------------------\")\n",
         "print(\"STEP 5: ASSET DOWNLOAD\")\n",
@@ -109,7 +112,7 @@
         "!python main.py --listen --dont-print-server & cloudflared tunnel --url http://localhost:8188\n"
       ],
       "metadata": {
-        "id": "k21vkfdsfKo7"
+        "id": "JKrXml6ymOHj"
       },
       "execution_count": null,
       "outputs": []
