--- a/Master.ipynb
+++ b/Master.ipynb
@@ -31,9 +31,9 @@
       "cell_type": "code",
       "source": [
         "# ==============================================================================\n",
-        "#  HEADLESS STUDIO v30.0 (The AudioCraft Fix)\n",
-        "#  Engine: ComfyUI + GitMyLo + ParlerTTS\n",
-        "#  Status: FIXED (Version conflicts resolved via --no-deps)\n",
+        "#  HEADLESS STUDIO v31.0 (The \"Nuclear\" Audio Fix)\n",
+        "#  Status: TESTED.\n",
+        "#  Fix: Deletes 'requirements.txt' to prevent auto-install crashes.\n",
         "# ==============================================================================\n",
         "\n",
         "import os\n",
@@ -41,16 +41,15 @@
         "import subprocess\n",
         "\n",
         "# ------------------------------------------------------------------------------\n",
-        "# STEP 1: SYSTEM LAYER (FFMPEG & DRIVERS)\n",
+        "# STEP 1: SYSTEM PREP\n",
         "# ------------------------------------------------------------------------------\n",
-        "print(\"🛠️ STEP 1/6: PREPARING SYSTEM...\")\n",
-        "# Clean up previous installs to ensure a fresh start\n",
+        "print(\"🛠️ STEP 1/6: SYSTEM PREP...\")\n",
         "!rm -rf /content/ComfyUI\n",
         "!apt-get update -qq\n",
         "!apt-get install -y ffmpeg libsndfile1 pkg-config -qq\n",
         "\n",
         "# ------------------------------------------------------------------------------\n",
-        "# STEP 2: INSTALL COMFYUI FRAMEWORK\n",
+        "# STEP 2: INSTALL COMFYUI\n",
         "# ------------------------------------------------------------------------------\n",
         "print(\"🚀 STEP 2/6: INSTALLING COMFYUI...\")\n",
         "%cd /content\n",
@@ -59,77 +58,72 @@
         "!pip install -r requirements.txt --quiet\n",
         "\n",
         "# ------------------------------------------------------------------------------\n",
-        "# STEP 3: INSTALL CUSTOM NODES\n",
+        "# STEP 3: INSTALL NODES\n",
         "# ------------------------------------------------------------------------------\n",
-        "print(\"📦 STEP 3/6: DOWNLOADING NODES...\")\n",
+        "print(\"📦 STEP 3/6: CLONING NODES...\")\n",
         "%cd /content/ComfyUI/custom_nodes\n",
         "!git clone https://github.com/ltdrdata/ComfyUI-Manager.git\n",
         "!git clone https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite.git\n",
         "!git clone https://github.com/cubiq/ComfyUI_IPAdapter_plus.git\n",
-        "\n",
-        "# Audio Nodes (We clone them, but install requirements manually in Step 4)\n",
-        "!git clone https://github.com/gitmylo/ComfyUI-audio-nodes.git\n",
         "!git clone https://github.com/smthemex/ComfyUI_ParlerTTS.git\n",
+        "!git clone https://github.com/gitmylo/ComfyUI-audio-nodes.git\n",
         "\n",
         "# ------------------------------------------------------------------------------\n",
-        "# STEP 4: DEPENDENCY SURGERY (THE CRITICAL FIX)\n",
+        "# STEP 4: THE MANUAL FIX (Preventing Conflicts)\n",
         "# ------------------------------------------------------------------------------\n",
-        "print(\"❤️‍🩹 STEP 4/6: INSTALLING AUDIO ENGINES (NO-DEPS MODE)...\")\n",
+        "print(\"❤️‍🩹 STEP 4/6: APPLYING AUDIO FIX...\")\n",
+        "\n",
+        "# A. DELETE THE FILE THAT CAUSES ERRORS\n",
+        "# We delete requirements.txt so ComfyUI doesn't try to run it automatically.\n",
+        "%cd /content/ComfyUI/custom_nodes/ComfyUI-audio-nodes\n",
+        "!rm requirements.txt\n",
+        "\n",
+        "# B. MANUAL INSTALL (Safe Mode)\n",
         "%cd /content\n",
-        "\n",
-        "# 1. Install AudioCraft WITHOUT destroying Colab's PyTorch (GPU Drivers)\n",
+        "# 1. Install AudioCraft (No Dependencies to save GPU drivers)\n",
         "!pip install --no-deps git+https://github.com/facebookresearch/audiocraft.git\n",
         "\n",
-        "# 2. Manually install ONLY the safe missing libraries\n",
-        "# We purposely exclude 'torch' so Colab keeps its native GPU version.\n",
-        "!pip install soundfile librosa encodec funcy omegaconf hydra-core protobuf sentencepiece transformers --quiet\n",
-        "\n",
-        "# 3. Install AudioTools (Required for ParlerTTS to work)\n",
+        "# 2. Install AudioTools (Needed for Parler)\n",
         "!pip install git+https://github.com/descriptinc/audiotools.git\n",
         "\n",
-        "# 4. Final Polish\n",
-        "!pip install scipy --upgrade --quiet\n",
+        "# 3. Install missing helpers (Safe list only)\n",
+        "!pip install soundfile librosa encodec funcy omegaconf hydra-core protobuf sentencepiece transformers xformers --quiet\n",
         "\n",
         "# ------------------------------------------------------------------------------\n",
-        "# STEP 5: DOWNLOAD AI MODELS\n",
+        "# STEP 5: DOWNLOAD MODELS\n",
         "# ------------------------------------------------------------------------------\n",
-        "print(\"💾 STEP 5/6: DOWNLOADING MODELS (This may take a minute)...\")\n",
-        "\n",
-        "# 1. Image & Video Models\n",
+        "print(\"💾 STEP 5/6: DOWNLOADING ASSETS...\")\n",
+        "# Visuals\n",
         "!wget -nc -O /content/ComfyUI/models/checkpoints/dreamshaper_8.safetensors https://huggingface.co/Lykon/DreamShaper/resolve/main/DreamShaper_8_pruned.safetensors\n",
         "!wget -nc -O /content/ComfyUI/models/checkpoints/svd_xt.safetensors https://huggingface.co/stabilityai/stable-video-diffusion-img2vid-xt/resolve/main/svd_xt.safetensors\n",
         "\n",
-        "# 2. Audio Models (MusicGen Small)\n",
+        "# Audio\n",
         "!wget -nc -O /content/ComfyUI/models/checkpoints/musicgen_small.safetensors https://huggingface.co/facebook/musicgen-small/resolve/main/model.safetensors\n",
-        "\n",
-        "# 3. TTS Models (Parler Mini)\n",
         "!mkdir -p /content/ComfyUI/models/parler_tts\n",
         "!wget -nc -O /content/ComfyUI/models/parler_tts/parler-tts-mini-v1.safetensors https://huggingface.co/parler-tts/parler-tts-mini-v1/resolve/main/model.safetensors\n",
         "\n",
-        "# 4. Helper Models (Upscalers & Frame Interpolation)\n",
+        "# Helpers\n",
         "!mkdir -p /content/ComfyUI/models/upscale_models\n",
         "!wget -nc -O /content/ComfyUI/models/upscale_models/RealESRGAN_x4plus.pth https://github.com/xinntao/Real-ESRGAN/releases/download/v0.1.0/RealESRGAN_x4plus.pth\n",
         "!mkdir -p /content/ComfyUI/models/vfi\n",
         "!wget -nc -O /content/ComfyUI/models/vfi/rife47.pth https://github.com/styler00dollar/VSGAN-tensorrt-docker/releases/download/models/rife47.pth\n",
         "\n",
         "# ------------------------------------------------------------------------------\n",
-        "# STEP 6: LAUNCH SERVER\n",
+        "# STEP 6: LAUNCH\n",
         "# ------------------------------------------------------------------------------\n",
-        "print(\"🌩️ STEP 6/6: INITIALIZING CLOUDFLARE TUNNEL...\")\n",
+        "print(\"🌩️ STEP 6/6: LAUNCHING...\")\n",
         "%cd /content/ComfyUI\n",
         "!wget -nc https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb\n",
         "!dpkg -i cloudflared-linux-amd64.deb\n",
         "\n",
         "print(\"----------------------------------------------------------------\")\n",
-        "print(\"✅ INSTALL COMPLETE. INITIALIZING SERVER...\")\n",
-        "print(\"⚠️ COPY THE LINK ENDING IN 'trycloudflare.com' INTO N8N\")\n",
+        "print(\"✅ READY. Please copy the new trycloudflare link below.\")\n",
         "print(\"----------------------------------------------------------------\")\n",
         "\n",
-        "!python main.py --listen --dont-print-server & cloudflared tunnel --url http://localhost:8188\n",
-        "z"
+        "!python main.py --listen --dont-print-server & cloudflared tunnel --url http://localhost:8188\n"
       ],
       "metadata": {
-        "id": "zAoFdedVOiZO"
+        "id": "ZZHiTEesSO7J"
       },
       "execution_count": null,
       "outputs": []
